2004-05-17  Mark Kettenis  <kettenis@gnu.org>

	* m68k-tdep.h (m68k_regnum): Add M68K_D2_REGNUM, M68K_D7_REGNUM
	and M68K_A2_REGNUM.

	* m68k-tdep.c (m68k_svr4_return_value): Implement
	RETURN_VALUE_ABI_RETURNS_ADDRESS.

2004-05-16  Mark Kettenis  <kettenis@gnu.org>

	* sol-thread.c Update copyright year.  Fix various coding
	standards violations.  Tweak a few comments.
	(td_err_string, td_state_string, thread_to_lwp, lwp_to_thread):
	Delete prototypes.

2004-05-15  Randolph Chung  <tausq@debian.org>

	* hppa-tdep.h (hppa_frame_prev_register_helper): Pass save_regs
	as pointer instead of array reference since HPUX compiler does
	not accept unsized array arguments.
	* somsolib.c (dld_flags_buffer): Use constant array size.

2004-05-15  Mark Kettenis  <kettenis@gnu.org>

	* amd64obsd-tdep.c (amd64obsd_sigtramp_p): Replace hexadecimal
	offset with decimal offset.
	(amd64obsd_sigcontext_addr): Return correct address for entire
	signal trampoline.

	* vax-tdep.c (vax_frame_num_args): Use get_frame_base_address
	instead of get_frame_base.

	* i386bsd-nat.c (supply_gregset): Use regcache_raw_supply.
	(fill_gregset): Use regcache_raw_collect.

	* config/djgpp/fnchange.lst: Add entries for ppcobsd-nat.c and
	ppcobsd-tdep.c.

	* config/sparc/tm-nbsd64.h: Remove file.
	* config/tm-sunos.h: Remove file.

2004-05-15  Joel Brobecker  <brobecker@gnat.com>

	* rs6000-tdep.c (store_param_on_stack_p): New function,
	an improved version of some code extracted from skip_prologue().
	(skip_prologue): Use store_param_on_stack_p() to detect
	instructions saving a parameter on the stack. Detect when r0
	is used to save a parameter.
	Do not mark "li rx, SIMM" instructions as part of the prologue,
	unless the following instruction is also part of the prologue.

2004-05-14  Andrew Cagney  <cagney@redhat.com>

	* infrun.c (handle_inferior_event): Simplify
	STEP_OVER_UNDEBUGGABLE.

	* infrun.c (handle_step_into_function): Delete function.
	(handle_inferior_event): Inline calls to